src/CParser.py
# Generated from C.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&'", "'&&'", "'='", "'/*'", "'//'", 
                     "'break'", "','", "'const'", "'continue'", "'\"'", 
                     "'.'", "'else'", "'*/'", "'=='", "'for'", "'>'", "'>='", 
                     "'if'", "'#include'", "'{'", "'<'", "'<='", "'('", 
                     "'['", "'-'", "'!'", "'!='", "'||'", "'+'", "'}'", 
                     "'return'", "')'", "']'", "';'", "'/'", "'''", "'*'", 
                     "'typedef'", "'void'", "'while'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "AMPERSAND", "AND", "ASSIGN", "BEGINCOMMENT", 
                      "BEGININLINECOMMENT", "BREAK", "COMMA", "CONST", "CONTINUE", 
                      "DQUOTE", "DOT", "ELSE", "ENDCOMMENT", "EQUAL", "FOR", 
                      "GREATERTHAN", "GREATERTHANOREQUAL", "IF", "INCLUDE", 
                      "LBRACE", "LESSTHAN", "LESSTHANOREQUAL", "LPAREN", 
                      "LSQUAREBRACKET", "MINUS", "NOT", "NOTEQUAL", "OR", 
                      "PLUS", "RBRACE", "RETURN", "RPAREN", "RSQUAREBRACKET", 
                      "SEMICOLON", "SLASH", "SQUOTE", "STAR", "TYPEDEF", 
                      "VOID", "WHILE", "TRUE", "FALSE", "CHAR", "NUM", "REAL", 
                      "STRING", "CPATH", "IDENTIFIER", "COMMENT", "WHITESPACE", 
                      "NEWLINE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_expression = 2
    RULE_variable = 3
    RULE_basetype = 4

    ruleNames =  [ "program", "statement", "expression", "variable", "basetype" ]

    EOF = Token.EOF
    AMPERSAND=1
    AND=2
    ASSIGN=3
    BEGINCOMMENT=4
    BEGININLINECOMMENT=5
    BREAK=6
    COMMA=7
    CONST=8
    CONTINUE=9
    DQUOTE=10
    DOT=11
    ELSE=12
    ENDCOMMENT=13
    EQUAL=14
    FOR=15
    GREATERTHAN=16
    GREATERTHANOREQUAL=17
    IF=18
    INCLUDE=19
    LBRACE=20
    LESSTHAN=21
    LESSTHANOREQUAL=22
    LPAREN=23
    LSQUAREBRACKET=24
    MINUS=25
    NOT=26
    NOTEQUAL=27
    OR=28
    PLUS=29
    RBRACE=30
    RETURN=31
    RPAREN=32
    RSQUAREBRACKET=33
    SEMICOLON=34
    SLASH=35
    SQUOTE=36
    STAR=37
    TYPEDEF=38
    VOID=39
    WHILE=40
    TRUE=41
    FALSE=42
    CHAR=43
    NUM=44
    REAL=45
    STRING=46
    CPATH=47
    IDENTIFIER=48
    COMMENT=49
    WHITESPACE=50
    NEWLINE=51

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.StatementContext)
            else:
                return self.getTypedRuleContext(CParser.StatementContext,i)


        def getRuleIndex(self):
            return CParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.AMPERSAND) | (1 << CParser.BREAK) | (1 << CParser.CONST) | (1 << CParser.CONTINUE) | (1 << CParser.FOR) | (1 << CParser.IF) | (1 << CParser.INCLUDE) | (1 << CParser.LBRACE) | (1 << CParser.LPAREN) | (1 << CParser.MINUS) | (1 << CParser.NOT) | (1 << CParser.RETURN) | (1 << CParser.SEMICOLON) | (1 << CParser.STAR) | (1 << CParser.TYPEDEF) | (1 << CParser.VOID) | (1 << CParser.WHILE) | (1 << CParser.TRUE) | (1 << CParser.FALSE) | (1 << CParser.CHAR) | (1 << CParser.NUM) | (1 << CParser.REAL) | (1 << CParser.STRING) | (1 << CParser.IDENTIFIER))) != 0):
                self.state = 10
                self.statement()
                self.state = 15
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.SEMICOLON)
            else:
                return self.getToken(CParser.SEMICOLON, i)

        def BREAK(self):
            return self.getToken(CParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(CParser.CONTINUE, 0)

        def INCLUDE(self):
            return self.getToken(CParser.INCLUDE, 0)

        def CPATH(self):
            return self.getToken(CParser.CPATH, 0)

        def STRING(self):
            return self.getToken(CParser.STRING, 0)

        def RETURN(self):
            return self.getToken(CParser.RETURN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CParser.ExpressionContext,i)


        def VOID(self):
            return self.getToken(CParser.VOID, 0)

        def IF(self):
            return self.getToken(CParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.StatementContext)
            else:
                return self.getTypedRuleContext(CParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(CParser.ELSE, 0)

        def LBRACE(self):
            return self.getToken(CParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CParser.RBRACE, 0)

        def WHILE(self):
            return self.getToken(CParser.WHILE, 0)

        def FOR(self):
            return self.getToken(CParser.FOR, 0)

        def TYPEDEF(self):
            return self.getToken(CParser.TYPEDEF, 0)

        def basetype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.BasetypeContext)
            else:
                return self.getTypedRuleContext(CParser.BasetypeContext,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.IDENTIFIER)
            else:
                return self.getToken(CParser.IDENTIFIER, i)

        def LSQUAREBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.LSQUAREBRACKET)
            else:
                return self.getToken(CParser.LSQUAREBRACKET, i)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.NUM)
            else:
                return self.getToken(CParser.NUM, i)

        def RSQUAREBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.RSQUAREBRACKET)
            else:
                return self.getToken(CParser.RSQUAREBRACKET, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.COMMA)
            else:
                return self.getToken(CParser.COMMA, i)

        def getRuleIndex(self):
            return CParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = CParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 16
                self.match(CParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 17
                self.match(CParser.BREAK)
                self.state = 18
                self.match(CParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 19
                self.match(CParser.CONTINUE)
                self.state = 20
                self.match(CParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 21
                self.match(CParser.INCLUDE)
                self.state = 22
                _la = self._input.LA(1)
                if not(_la==CParser.STRING or _la==CParser.CPATH):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 23
                self.match(CParser.RETURN)
                self.state = 26
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 24
                    self.expression(0)

                elif la_ == 2:
                    self.state = 25
                    self.match(CParser.VOID)


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 28
                self.expression(0)
                self.state = 29
                self.match(CParser.SEMICOLON)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 31
                self.match(CParser.IF)
                self.state = 32
                self.match(CParser.LPAREN)
                self.state = 33
                self.expression(0)
                self.state = 34
                self.match(CParser.RPAREN)
                self.state = 35
                self.statement()
                self.state = 38
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.match(CParser.ELSE)
                    self.state = 37
                    self.statement()


                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 40
                self.match(CParser.LBRACE)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.AMPERSAND) | (1 << CParser.BREAK) | (1 << CParser.CONST) | (1 << CParser.CONTINUE) | (1 << CParser.FOR) | (1 << CParser.IF) | (1 << CParser.INCLUDE) | (1 << CParser.LBRACE) | (1 << CParser.LPAREN) | (1 << CParser.MINUS) | (1 << CParser.NOT) | (1 << CParser.RETURN) | (1 << CParser.SEMICOLON) | (1 << CParser.STAR) | (1 << CParser.TYPEDEF) | (1 << CParser.VOID) | (1 << CParser.WHILE) | (1 << CParser.TRUE) | (1 << CParser.FALSE) | (1 << CParser.CHAR) | (1 << CParser.NUM) | (1 << CParser.REAL) | (1 << CParser.STRING) | (1 << CParser.IDENTIFIER))) != 0):
                    self.state = 41
                    self.statement()
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 47
                self.match(CParser.RBRACE)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 48
                self.match(CParser.WHILE)
                self.state = 49
                self.match(CParser.LPAREN)
                self.state = 50
                self.expression(0)
                self.state = 51
                self.match(CParser.RPAREN)
                self.state = 52
                self.statement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 54
                self.match(CParser.FOR)
                self.state = 55
                self.match(CParser.LPAREN)
                self.state = 57
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.AMPERSAND) | (1 << CParser.CONST) | (1 << CParser.LPAREN) | (1 << CParser.MINUS) | (1 << CParser.NOT) | (1 << CParser.STAR) | (1 << CParser.VOID) | (1 << CParser.TRUE) | (1 << CParser.FALSE) | (1 << CParser.CHAR) | (1 << CParser.NUM) | (1 << CParser.REAL) | (1 << CParser.STRING) | (1 << CParser.IDENTIFIER))) != 0):
                    self.state = 56
                    self.expression(0)


                self.state = 59
                self.match(CParser.SEMICOLON)
                self.state = 61
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.AMPERSAND) | (1 << CParser.CONST) | (1 << CParser.LPAREN) | (1 << CParser.MINUS) | (1 << CParser.NOT) | (1 << CParser.STAR) | (1 << CParser.VOID) | (1 << CParser.TRUE) | (1 << CParser.FALSE) | (1 << CParser.CHAR) | (1 << CParser.NUM) | (1 << CParser.REAL) | (1 << CParser.STRING) | (1 << CParser.IDENTIFIER))) != 0):
                    self.state = 60
                    self.expression(0)


                self.state = 63
                self.match(CParser.SEMICOLON)
                self.state = 65
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.AMPERSAND) | (1 << CParser.CONST) | (1 << CParser.LPAREN) | (1 << CParser.MINUS) | (1 << CParser.NOT) | (1 << CParser.STAR) | (1 << CParser.VOID) | (1 << CParser.TRUE) | (1 << CParser.FALSE) | (1 << CParser.CHAR) | (1 << CParser.NUM) | (1 << CParser.REAL) | (1 << CParser.STRING) | (1 << CParser.IDENTIFIER))) != 0):
                    self.state = 64
                    self.expression(0)


                self.state = 67
                self.match(CParser.RPAREN)
                self.state = 68
                self.statement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 69
                self.match(CParser.TYPEDEF)
                self.state = 70
                self.basetype(0)
                self.state = 71
                self.match(CParser.IDENTIFIER)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CParser.LSQUAREBRACKET:
                    self.state = 72
                    self.match(CParser.LSQUAREBRACKET)
                    self.state = 73
                    self.match(CParser.NUM)
                    self.state = 74
                    self.match(CParser.RSQUAREBRACKET)
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 80
                self.match(CParser.SEMICOLON)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 82
                self.basetype(0)
                self.state = 83
                self.match(CParser.IDENTIFIER)
                self.state = 84
                self.match(CParser.LPAREN)
                self.state = 100
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 85
                    self.match(CParser.VOID)

                elif la_ == 2:
                    self.state = 86
                    self.basetype(0)
                    self.state = 88
                    _la = self._input.LA(1)
                    if _la==CParser.IDENTIFIER:
                        self.state = 87
                        self.match(CParser.IDENTIFIER)


                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CParser.COMMA:
                        self.state = 90
                        self.match(CParser.COMMA)
                        self.state = 91
                        self.basetype(0)
                        self.state = 93
                        _la = self._input.LA(1)
                        if _la==CParser.IDENTIFIER:
                            self.state = 92
                            self.match(CParser.IDENTIFIER)


                        self.state = 99
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 102
                self.match(CParser.RPAREN)
                self.state = 112
                token = self._input.LA(1)
                if token in [CParser.SEMICOLON]:
                    self.state = 103
                    self.match(CParser.SEMICOLON)

                elif token in [CParser.LBRACE]:
                    self.state = 104
                    self.match(CParser.LBRACE)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.AMPERSAND) | (1 << CParser.BREAK) | (1 << CParser.CONST) | (1 << CParser.CONTINUE) | (1 << CParser.FOR) | (1 << CParser.IF) | (1 << CParser.INCLUDE) | (1 << CParser.LBRACE) | (1 << CParser.LPAREN) | (1 << CParser.MINUS) | (1 << CParser.NOT) | (1 << CParser.RETURN) | (1 << CParser.SEMICOLON) | (1 << CParser.STAR) | (1 << CParser.TYPEDEF) | (1 << CParser.VOID) | (1 << CParser.WHILE) | (1 << CParser.TRUE) | (1 << CParser.FALSE) | (1 << CParser.CHAR) | (1 << CParser.NUM) | (1 << CParser.REAL) | (1 << CParser.STRING) | (1 << CParser.IDENTIFIER))) != 0):
                        self.state = 105
                        self.statement()
                        self.state = 110
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 111
                    self.match(CParser.RBRACE)

                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(CParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(CParser.FALSE, 0)

        def CHAR(self):
            return self.getToken(CParser.CHAR, 0)

        def NUM(self):
            return self.getToken(CParser.NUM, 0)

        def REAL(self):
            return self.getToken(CParser.REAL, 0)

        def STRING(self):
            return self.getToken(CParser.STRING, 0)

        def variable(self):
            return self.getTypedRuleContext(CParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(CParser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CParser.ExpressionContext,i)


        def basetype(self):
            return self.getTypedRuleContext(CParser.BasetypeContext,0)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.IDENTIFIER)
            else:
                return self.getToken(CParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.COMMA)
            else:
                return self.getToken(CParser.COMMA, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.MINUS)
            else:
                return self.getToken(CParser.MINUS, i)

        def NOT(self):
            return self.getToken(CParser.NOT, 0)

        def AMPERSAND(self):
            return self.getToken(CParser.AMPERSAND, 0)

        def STAR(self):
            return self.getToken(CParser.STAR, 0)

        def LPAREN(self):
            return self.getToken(CParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CParser.RPAREN, 0)

        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.PLUS)
            else:
                return self.getToken(CParser.PLUS, i)

        def EQUAL(self):
            return self.getToken(CParser.EQUAL, 0)

        def NOTEQUAL(self):
            return self.getToken(CParser.NOTEQUAL, 0)

        def GREATERTHAN(self):
            return self.getToken(CParser.GREATERTHAN, 0)

        def LESSTHAN(self):
            return self.getToken(CParser.LESSTHAN, 0)

        def LESSTHANOREQUAL(self):
            return self.getToken(CParser.LESSTHANOREQUAL, 0)

        def GREATERTHANOREQUAL(self):
            return self.getToken(CParser.GREATERTHANOREQUAL, 0)

        def AND(self):
            return self.getToken(CParser.AND, 0)

        def OR(self):
            return self.getToken(CParser.OR, 0)

        def SLASH(self):
            return self.getToken(CParser.SLASH, 0)

        def LSQUAREBRACKET(self):
            return self.getToken(CParser.LSQUAREBRACKET, 0)

        def RSQUAREBRACKET(self):
            return self.getToken(CParser.RSQUAREBRACKET, 0)

        def getRuleIndex(self):
            return CParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 117
                self.match(CParser.TRUE)
                pass

            elif la_ == 2:
                self.state = 118
                self.match(CParser.FALSE)
                pass

            elif la_ == 3:
                self.state = 119
                self.match(CParser.CHAR)
                pass

            elif la_ == 4:
                self.state = 120
                self.match(CParser.NUM)
                pass

            elif la_ == 5:
                self.state = 121
                self.match(CParser.REAL)
                pass

            elif la_ == 6:
                self.state = 122
                self.match(CParser.STRING)
                pass

            elif la_ == 7:
                self.state = 123
                self.variable(0)
                self.state = 124
                self.match(CParser.ASSIGN)
                self.state = 125
                self.expression(13)
                pass

            elif la_ == 8:
                self.state = 127
                self.variable(0)
                pass

            elif la_ == 9:
                self.state = 128
                self.basetype(0)
                self.state = 129
                self.match(CParser.IDENTIFIER)
                self.state = 132 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 130
                        self.match(CParser.COMMA)
                        self.state = 131
                        self.match(CParser.IDENTIFIER)

                    else:
                        raise NoViableAltException(self)
                    self.state = 134 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

                self.state = 138
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                if la_ == 1:
                    self.state = 136
                    self.match(CParser.ASSIGN)
                    self.state = 137
                    self.expression(0)


                pass

            elif la_ == 10:
                self.state = 140
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.AMPERSAND) | (1 << CParser.MINUS) | (1 << CParser.NOT) | (1 << CParser.STAR))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 141
                self.expression(10)
                pass

            elif la_ == 11:
                self.state = 142
                self.variable(0)
                pass

            elif la_ == 12:
                self.state = 143
                self.match(CParser.LPAREN)
                self.state = 144
                self.expression(0)
                self.state = 145
                self.match(CParser.RPAREN)
                pass

            elif la_ == 13:
                self.state = 147
                self.variable(0)
                self.state = 152
                token = self._input.LA(1)
                if token in [CParser.PLUS]:
                    self.state = 148
                    self.match(CParser.PLUS)
                    self.state = 149
                    self.match(CParser.PLUS)

                elif token in [CParser.MINUS]:
                    self.state = 150
                    self.match(CParser.MINUS)
                    self.state = 151
                    self.match(CParser.MINUS)

                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 14:
                self.state = 154
                self.match(CParser.IDENTIFIER)
                self.state = 155
                self.match(CParser.LPAREN)
                self.state = 164
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.AMPERSAND) | (1 << CParser.CONST) | (1 << CParser.LPAREN) | (1 << CParser.MINUS) | (1 << CParser.NOT) | (1 << CParser.STAR) | (1 << CParser.VOID) | (1 << CParser.TRUE) | (1 << CParser.FALSE) | (1 << CParser.CHAR) | (1 << CParser.NUM) | (1 << CParser.REAL) | (1 << CParser.STRING) | (1 << CParser.IDENTIFIER))) != 0):
                    self.state = 156
                    self.expression(0)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CParser.COMMA:
                        self.state = 157
                        self.match(CParser.COMMA)
                        self.state = 158
                        self.expression(0)
                        self.state = 163
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 166
                self.match(CParser.RPAREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 188
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,22,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 186
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
                    if la_ == 1:
                        localctx = CParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 169
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 170
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.EQUAL) | (1 << CParser.GREATERTHAN) | (1 << CParser.GREATERTHANOREQUAL) | (1 << CParser.LESSTHAN) | (1 << CParser.LESSTHANOREQUAL) | (1 << CParser.NOTEQUAL))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 171
                        self.expression(8)
                        pass

                    elif la_ == 2:
                        localctx = CParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 172
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 173
                        _la = self._input.LA(1)
                        if not(_la==CParser.AND or _la==CParser.OR):
                            self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 174
                        self.expression(7)
                        pass
